--- a/views/index.html
+++ b/views/index.html
@@ -53,11 +53,11 @@
       </section>
     </main>
 
-    <footer>Made by <a href="https://glitch.com">Minds0987</a>!</footer>
+    <footer>Made by <a href="">Minds0987</a>!</footer>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    <!--<div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script>
   </body>
-</html>
+</html>-->
